[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/snake-graphics.png" type="Texture" id=1]
[ext_resource path="res://Assets/apple.png" type="Texture" id=2]
[ext_resource path="res://Script/MainScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/grass.png" type="Texture" id=4]
[ext_resource path="res://Assets/border.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Label.gd" type="Script" id=6]
[ext_resource path="res://Assets/apple_score.png" type="Texture" id=7]
[ext_resource path="res://Assets/score_border.png" type="Texture" id=8]
[ext_resource path="res://Assets/apple_bite.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/snake_music.mp3" type="AudioStream" id=10]
[ext_resource path="res://Script/Music.gd" type="Script" id=11]
[ext_resource path="res://Assets/hit.mp3" type="AudioStream" id=12]

[sub_resource type="TileSet" id=1]
0/name = "snake-graphics.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 256 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 3, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "apple.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "border.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 64, 64 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "border.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/OCRAEXT.TTF"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -97.0798, 799.985 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 796.0
margin_bottom = 796.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnakeApple" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1

[node name="Border" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1

[node name="SnakeTick" type="Timer" parent="."]
wait_time = 0.16
autostart = true

[node name="Score" type="Label" parent="." groups=[
"Score",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 693.073
margin_top = 26.1091
margin_right = 755.073
margin_bottom = 52.1091
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_border" type="Sprite" parent="Score"]
position = Vector2( 3.40674, 12.7406 )
scale = Vector2( 1.8775, 1.4719 )
texture = ExtResource( 8 )

[node name="apple_score" type="Sprite" parent="Score"]
position = Vector2( -21.4446, 10.9966 )
scale = Vector2( 0.502759, 0.502759 )
texture = ExtResource( 7 )

[node name="Music" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Crunch" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="BG" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 10 )

[node name="Wall_hit" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 12 )

[node name="RestartButton" type="Button" parent="."]
visible = false
margin_left = 343.331
margin_top = 378.092
margin_right = 456.331
margin_bottom = 418.092
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_border" type="Sprite" parent="."]
position = Vector2( 399.109, 384.12 )
rotation = 3.14159
scale = Vector2( 14.534, 28.9355 )
texture = ExtResource( 8 )

[connection signal="timeout" from="SnakeTick" to="." method="_on_SnakeTick_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
